# mesofield

./: .buildinfo  .gitignore  Makefile  README.md  TUTORIAL.md  build_executable.py  config_launcher.py  developer_guide.html  genindex.html  gui_launcher.py  index.html  launcher.py  minimal_launcher.py  objects.inv  py-modindex.html  pyproject.toml  requirements-test.txt  search.html  searchindex.js  tutorial.html  user_guide.html
.doctrees/: developer_guide.doctree  index.doctree  tutorial.doctree  user_guide.doctree
.doctrees/api/: index.doctree  mesofield.base.doctree  mesofield.cli.acquire.doctree  mesofield.cli.datakit.doctree  mesofield.cli.doctree  mesofield.cli.process.doctree  mesofield.cli.rig.doctree  mesofield.cli.tools.doctree  mesofield.config.doctree  mesofield.data.batch.doctree  mesofield.data.codecs.doctree  mesofield.data.doctree  mesofield.data.manager.doctree  mesofield.data.writer.doctree  mesofield.datakit.config.doctree  mesofield.datakit.core.doctree  mesofield.datakit.datamodel.doctree  mesofield.datakit.discover.doctree  mesofield.datakit.doctree  mesofield.datakit.explore.doctree  mesofield.datakit.profile.doctree  mesofield.datakit.shell.doctree  mesofield.datakit.sources.behavior.dataqueue.doctree  mesofield.datakit.sources.behavior.doctree  mesofield.datakit.sources.behavior.psychopy.doctree  mesofield.datakit.sources.behavior.treadmill.doctree  mesofield.datakit.sources.behavior.wheel.doctree  mesofield.datakit.sources.doctree  mesofield.datakit.sources.register.doctree  mesofield.datakit.timeline.doctree  mesofield.devices.base.doctree  mesofield.devices.base_camera.doctree  mesofield.devices.cameras.doctree  mesofield.devices.daq.doctree  mesofield.devices.doctree  mesofield.devices.encoder.doctree  mesofield.devices.mocks.doctree  mesofield.devices.psychopy_device.doctree  mesofield.devices.subprocesses.doctree  mesofield.devices.subprocesses.psychopy.doctree  (+29 more)
.github/: release.yml
.github/workflows/: docs.yml  publish.yml  release.yml
_modules/: index.html
_modules/mesofield/: base.html  config.html  engines.html  gui.html  hardware.html  playback.html  protocols.html  signals.html
_sources/: developer_guide.md.txt  index.md.txt  tutorial.md.txt  user_guide.md.txt
_sources/api/: mesofield.base.rst.txt  mesofield.cli.acquire.rst.txt  mesofield.cli.datakit.rst.txt  mesofield.cli.process.rst.txt  mesofield.cli.rig.rst.txt  mesofield.cli.rst.txt  mesofield.cli.tools.rst.txt  mesofield.config.rst.txt  mesofield.data.batch.rst.txt  mesofield.data.codecs.rst.txt  mesofield.data.manager.rst.txt  mesofield.data.rst.txt  mesofield.data.writer.rst.txt  mesofield.datakit.config.rst.txt  mesofield.datakit.core.rst.txt  mesofield.datakit.datamodel.rst.txt  mesofield.datakit.discover.rst.txt  mesofield.datakit.explore.rst.txt  mesofield.datakit.profile.rst.txt  mesofield.datakit.rst.txt  mesofield.datakit.shell.rst.txt  mesofield.datakit.sources.behavior.dataqueue.rst.txt  mesofield.datakit.sources.behavior.psychopy.rst.txt  mesofield.datakit.sources.behavior.rst.txt  mesofield.datakit.sources.behavior.treadmill.rst.txt  mesofield.datakit.sources.behavior.wheel.rst.txt  mesofield.datakit.sources.register.rst.txt  mesofield.datakit.sources.rst.txt  mesofield.datakit.timeline.rst.txt  mesofield.devices.base.rst.txt  mesofield.devices.base_camera.rst.txt  (+37 more)
_static/: documentation_options.js
api/: index.html  mesofield.base.html  mesofield.cli.acquire.html  mesofield.cli.datakit.html  mesofield.cli.html  mesofield.cli.process.html  mesofield.cli.rig.html  mesofield.cli.tools.html  mesofield.config.html  mesofield.data.batch.html  mesofield.data.codecs.html  mesofield.data.html  mesofield.data.manager.html  mesofield.data.writer.html  mesofield.datakit.config.html  mesofield.datakit.core.html  mesofield.datakit.datamodel.html  mesofield.datakit.discover.html  mesofield.datakit.explore.html  mesofield.datakit.html  mesofield.datakit.profile.html  mesofield.datakit.shell.html  mesofield.datakit.sources.behavior.dataqueue.html  mesofield.datakit.sources.behavior.html  mesofield.datakit.sources.behavior.psychopy.html  mesofield.datakit.sources.behavior.treadmill.html  mesofield.datakit.sources.behavior.wheel.html  mesofield.datakit.sources.html  mesofield.datakit.sources.register.html  mesofield.datakit.timeline.html  mesofield.devices.base.html  mesofield.devices.base_camera.html  mesofield.devices.cameras.html  mesofield.devices.daq.html  mesofield.devices.encoder.html  mesofield.devices.html  mesofield.devices.mocks.html  mesofield.devices.psychopy_device.html  mesofield.devices.subprocesses.html  mesofield.devices.subprocesses.psychopy.html  (+29 more)
docs/: conf.py  developer_guide.md  index.md  user_guide.md
examples/: lick_detector.py  teensy_pulse_generator.py
manuscript/: mesofield_draft.md  mesofield_refs.bib
mesofield/: __init__.py  __main__.py  base.py  config.py  engines.py  hardware.py  playback.py  plugins.py  protocols.py  scaffold.py  signals.py
scripts/: bench_frame_processor.py  bench_freq_detector.py  bench_freq_detector_tiff.py  bench_hardware.py  detect_opencv_camera.py
tests/: _helpers.py  arducam.py  conftest.py  dev.yaml  devcfg.json  probe_windows_capture.py  test_base_devices.py  test_camera_shutdown.py  test_config_builder.py  test_config_simplification.py  test_controller_gui.py  test_data_outcomes.py  test_dataqueue_playback.py  test_device_contracts.py  test_device_registration.py  test_encoder_devices.py  test_experiment_config.py  test_experiment_logic.py  test_launch_flows.py  test_lifecycle_conformance.py  test_mda.py  test_mmcore_integration.py  test_mouseportal_handler.py  test_mouseportal_protocol.py  test_opencv_camera.py  test_pipeline.py  test_playback_launch.py  test_playback_media.py  test_procedure_discovery.py  test_procedure_lifecycle.py  test_psychopy.py  test_rerecord.py  test_signals.py  test_speedplotter.py  test_stimulus_devices.py  test_viewer_signals.py  test_workflow.py
(+197 files in other folders)
