[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesofield"
dynamic = ["version"]
description = "Mesofield is an open-source image acquisition Python software package build for the Sipe Laboratory at Pennsylvania State University."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jacob Gronemeyer"}
]
keywords = ["imaging", "microscopy", "acquisition", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "annotated-types",
    "click",
    "ipykernel",
    "ipython",
    "jupyter_client",
    "jupyter_core",
    "loguru",
    "markdown-it-py",
    "matplotlib",
    "mesokit-schema @ git+https://github.com/Gronemeyer/mesokit-schema.git",
    "nidaqmx",
    "numpy",
    "packaging",
    "pandas",
    "parso",
    "pillow",
    "platformdirs",
    "psygnal",
    "pyaml",
    "opencv-python",
    "pymmcore",
    "pymmcore-plus",
    "pymmcore-widgets",
    "PyQt6",
    "PyQt6-Qt6",
    "PyQt6_sip",
    "pyqtgraph",
    "pyserial",
    "python-dateutil",
    "pytz",
    "pywin32; sys_platform == 'win32'",
    "pyzmq",
    "qtconsole",
    "rich",
    "setuptools",
    "tifffile",
    "typer",
    "typer-slim",
    "typing_extensions",
    "useq-schema",
    "wheel",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "flake8",
    "black",
    "isort",
    "pytest-cov",
    "mypy",
    "gitchangelog",
]
docs = [
    "sphinx>=7",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.scripts]
mesofield = "mesofield.__main__:cli"

[project.urls]
Homepage = "https://github.com/Gronemeyer/mesofield/"
Repository = "https://github.com/Gronemeyer/mesofield/"
Issues = "https://github.com/Gronemeyer/mesofield/issues"
Documentation = "https://gronemeyer.github.io/mesofield/"

[tool.setuptools.packages.find]
exclude = ["tests*", ".github*"]

[tool.setuptools_scm]
write_to = "mesofield/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
