[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesofield"
dynamic = ["version"]
description = "Mesofield is an open-source image acquisition Python software package build for the Sipe Laboratory at Pennsylvania State University."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jacob Gronemeyer"}
]
keywords = ["imaging", "microscopy", "acquisition", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "annotated-types",
    "click",
    "ipykernel",
    "ipython",
    "jupyter_client",
    "jupyter_core",
    "loguru",
    "markdown-it-py",
    "matplotlib",
    "mesokit-schema",
    "nidaqmx",
    "numpy",
    "packaging",
    "pandas",
    "parso",
    "pillow",
    "platformdirs",
    "psygnal",
    "pyaml",
    "opencv-python",
    "pymmcore",
    "pymmcore-plus",
    "pymmcore-widgets",
    "PyQt6",
    "PyQt6-Qt6",
    "PyQt6_sip",
    "pyqtgraph",
    "pyserial",
    "python-dateutil",
    "pytz",
    "pywin32; sys_platform == 'win32'",
    "pyzmq",
    "qtconsole",
    "rich",
    "setuptools",
    "tifffile",
    "typer",
    "typer-slim",
    "typing_extensions",
    "useq-schema",
    "wheel",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-qt",
    "pytest-timeout",
    "pytest-mock",
    "coverage",
    "flake8",
    "black",
    "isort",
    "pytest-cov",
    "mypy",
    "gitchangelog",
]
docs = [
    "sphinx>=7",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.scripts]
mesofield = "mesofield.cli:cli"

[project.urls]
Homepage = "https://github.com/Gronemeyer/mesofield/"
Repository = "https://github.com/Gronemeyer/mesofield/"
Issues = "https://github.com/Gronemeyer/mesofield/issues"
Documentation = "https://gronemeyer.github.io/mesofield/"

[tool.setuptools.packages.find]
exclude = ["tests*", ".github*"]

[tool.setuptools_scm]
write_to = "mesofield/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra: summary of all non-pass outcomes. --strict-markers: every marker must be
# registered below. --timeout: global safety net so a hung subprocess/Qt loop
# can't wedge CI (pytest-timeout uses the thread method on Windows).
addopts = "-ra --strict-markers --timeout=60"
# The project ships PyQt6; pin pytest-qt to it so the single session QApplication
# uses the same binding as the app (and fixes cross-test QObject lifetime leaks).
qt_api = "pyqt6"
markers = [
    "hardware: requires real hardware (camera/serial/MicroManager); skipped unless --run-hardware is passed",
    "gui: needs a Qt application; runs headless under the offscreen platform",
    "slow: long-running test",
    "integration: cross-component integration (e.g. pymmcore-plus demo, full pipeline)",
]
